# eww-niri-workspaces

./: Cargo.toml  LICENSE  README.md
src/: main.rs  serializable.rs
