[package]
name = "eww-niri-workspaces"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
niri-ipc = { git = "https://github.com/YaLTeR/niri", tag = "v0.1.9" }
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "sync", "macros", "tokio-macros", "io-std", "io-util", "net"] }
