[package]
name = "eww-niri-workspaces"
authors = ["druskus"]
version = "0.3.0"
edition = "2024"
license = "MIT"

[dependencies]
#niri-ipc = { git = "https://github.com/YaLTeR/niri", tag = "v25.05.1" }
niri-ipc = { rev = "3769e5da46064b1bd85d7791fc767bcfc36d5a1c", git = "https://github.com/YaLTeR/niri" }
serde = "1.0.228"
serde_json = "1.0"
eyre = "0.6"
